# Astraea

./: Cargo.toml  README.md  flake.nix
data/: constellations_1.json  constellations_2.json  constellations_3.json
doc/: todo  waswm-proecedure
src/: end_state.rs  explo_state.rs  game_state.rs  main.rs  start_state.rs
