[package]
name = "astraea"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = [ "dynamic_linking" ] }
rand = "0.8.5"
serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
